--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "axios": "^1.7.2",
     "googleapis": "^140.0.0",
+    "lottie-react": "^2.4.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
